# mcmc

./: CMakeLists.txt
examples/: CMakeLists.txt  LFLangevin.cpp  LFOrnsteinUhlenbeck.cpp  ParametersTest.cpp  ParticleMCMC.cpp  SMC.cpp  SequentialLFMCMC.cpp
experiments/: CMakeLists.txt  Endpoints.cpp  LFCurved.cpp  LFDiffSimple.cpp  LFLangevin.cpp  LFOrnsteinUhlenbeck.cpp  PMCMCCurved.cpp  ParticleMCMC.cpp  SMCBridgeRuns.cpp  SMCRuns.cpp  SMCRunsCurved.cpp
include/: Algorithm.h  BridgeDynamics.h  CurvedSurfaceDynamics.h  Dynamics.h  FourierSeries.h  Grid.h  LangevinDynamics.h  LangevinParams.h  LangevinPathScheme.h  LikelihoodFreeMCMC.h  LikelihoodFreeScheme.h  MCMCBase.h  MCMCSchemeBase.h  OUDynamics.h  OUParams.h  OUPathScheme.h  Options.h  Params.h  Particle.h  ParticleMCMC.h  PathScheme.h  SequentialLFMCMC.h
scripts/: compare_smc.r  ess_particle.r  ess_particle_dimension.r  lf_mcmc_langevin.r  lf_mcmc_langevin_output_2mode.r  lf_mcmc_ou.r  lf_mcmc_tuning.r  lf_mcmc_tuning_m.r  lf_mcmc_tuning_o.r  lf_mcmc_tuning_parallel_paths.r  lf_mcmc_tuning_path_length.r  lf_mcmc_tuning_sigma.r  lf_variance.r  lfmcmc_K.sh  lfmcmc_M.sh  lfmcmc_P.sh  lfmcmc_all.sh  lfmcmc_l.sh  lfmcmc_o.sh  lfmcmc_ou.r  many_modes.r  mcmc_old_ou.r  pcmcmc_tuning.r  plot_dimension_increase.r  plot_particle_ess.r  plot_particle_smc_bridge_results.r  plot_particle_smc_results.r  plot_potential.r  pmcmc.r  pmcmc_langevin_output_2mode.r  smc_diffusion_bridge.r  smc_trajectories.r  test_mv_norm.r
src/: Algorithm.cpp  BridgeDynamics.cpp  CMakeLists.txt  CurvedSurfaceDynamics.cpp  Dynamics.cpp  FourierSeries.cpp  Grid.cpp  LangevinDynamics.cpp  LangevinParams.cpp  LangevinPathScheme.cpp  LikelihoodFreeMCMC.cpp  LikelihoodFreeScheme.cpp  OUDynamics.cpp  OUParams.cpp  OUPathScheme.cpp  Options.cpp  SequentialLFMCMC.cpp
tests/: CMakeLists.txt  CurvedSurfaceTests.cpp  TestBootstrap.cpp  TestDiffusionBridge.cpp  TestFileBufferingVector.cpp  TestFourierSeries.cpp  TestLangevin.cpp  TestNumericLimits.cpp  TestOU.cpp  TestOptions.cpp  TestRandom.cpp  TestVector.cpp  test_lognormal.r
tuning/: CMakeLists.txt  LFMCMCTuning.cpp
