set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fext-numeric-literals")
include_directories( ${MCMC_SOURCE_DIR}/include )

add_executable(TestOptions TestOptions.cpp)
target_link_libraries(TestOptions FourierSeries OUPathScheme Options gsl gslcblas)

add_test(Options_Options                       TestOptions  "Options_Options")
add_test(Options_rng_seed                      TestOptions  "Options_rng_seed")
add_test(Options_mcmc_trials                   TestOptions  "Options_mcmc_trials")
add_test(Options_path_length                   TestOptions  "Options_path_length")
add_test(Options_extra_data_ratio              TestOptions  "Options_extra_data_ratio")
add_test(Options_parallel_paths                TestOptions  "Options_parallel_paths")
add_test(Options_burn                          TestOptions  "Options_burn")
add_test(Options_parameters                    TestOptions  "Options_parameters")
add_test(Options_parameter_proposal_variance   TestOptions  "Options_parameter_proposal_variance")
add_test(Options_trajectory_path_delta         TestOptions  "Options_trajectory_path_delta")
add_test(Options_diffusion_coefficient         TestOptions  "Options_diffusion_coefficient")
add_test(Options_parameters_complex            TestOptions  "Options_parameters_complex")

add_executable(TestOU TestOU.cpp)
target_link_libraries(TestOU FourierSeries OUPathScheme OUParams Options gsl gslcblas)

add_test(OUPathScheme_generate_true_trajectory                TestOU "OUPathScheme_generate_true_trajectory")
add_test(OUPathScheme_generate_observations                   TestOU "OUPathScheme_generate_observations")
add_test(OUPathScheme_propose_trajectory                      TestOU "OUPathScheme_propose_trajectory")
add_test(OUPathScheme_propose_parameters                      TestOU "OUPathScheme_propose_parameters")
add_test(OUPathScheme_accept                                  TestOU "OUPathScheme_accept")
add_test(OUPathScheme_finish                                  TestOU "OUPathScheme_finish")
add_test(OUPathScheme_store_chain                             TestOU "OUPathScheme_store_chain")
add_test(OUPathScheme_log_path_ratio                          TestOU "OUPathScheme_log_path_ratio")
add_test(OUPathScheme_log_prior_ratio                         TestOU "OUPathScheme_log_prior_ratio")
add_test(OUPathScheme_log_transition_density_ratio            TestOU "OUPathScheme_log_transition_density_ratio")
add_test(OUParams_log_prior_ratio                             TestOU "OUParams_log_prior_ratio")
add_test(OUParams_accept                                      TestOU "OUParams_accept")
add_test(OUParams_store_chain                                 TestOU "OUParams_store_chain")

add_executable(TestLangevin TestLangevin.cpp)
target_link_libraries(TestLangevin FourierSeries LangevinPathScheme LangevinParams Options gsl gslcblas)

add_test(LangevinPathScheme_generate_true_trajectory                TestLangevin "LangevinPathScheme_generate_true_trajectory")
add_test(LangevinPathScheme_generate_observations                   TestLangevin "LangevinPathScheme_generate_observations")
add_test(LangevinPathScheme_propose_trajectory                      TestLangevin "LangevinPathScheme_propose_trajectory")
add_test(LangevinPathScheme_propose_parameters                      TestLangevin "LangevinPathScheme_propose_parameters")
add_test(LangevinPathScheme_accept                                  TestLangevin "LangevinPathScheme_accept")
add_test(LangevinPathScheme_finish                                  TestLangevin "LangevinPathScheme_finish")
add_test(LangevinPathScheme_store_chain                             TestLangevin "LangevinPathScheme_store_chain")
add_test(LangevinPathScheme_log_path_ratio                          TestLangevin "LangevinPathScheme_log_path_ratio")
add_test(LangevinPathScheme_log_prior_ratio                         TestLangevin "LangevinPathScheme_log_prior_ratio")
add_test(LangevinPathScheme_log_transition_density_ratio            TestLangevin "LangevinPathScheme_log_transition_density_ratio")
add_test(LangevinParams_log_prior_ratio                             TestLangevin "LangevinParams_log_prior_ratio")
add_test(LangevinParams_accept                                      TestLangevin "LangevinParams_accept")
add_test(LangevinParams_store_chain                                 TestLangevin "LangevinParams_store_chain")
